# BondForge

./: README.md
BondForge V1.2/: CMakeLists.txt  Makefile  README.md  README_EN.md  bondforge.cpp  build.bat  build.sh
BondForge V1.2/resources/: en-US.json  zh-CN.json
BondForge V2.0/: CMakeLists.txt  COMPREHENSIVE_GUIDE.md  Makefile  bondforge.cpp  build.py  install.py  main.cpp  run.py
BondForge V2.0/config/: bondforge.json
BondForge V2.0/config/i18n/: en-US.json  zh-CN.json
BondForge V2.0/core/chemistry/: MoleculeRenderer.cpp  MoleculeRenderer.h
BondForge V2.0/core/collaboration/: DataSharing.cpp  DataSharing.h  User.cpp  User.h
BondForge V2.0/core/data/: DataRecord.h  DataService.cpp  DataService.h
BondForge V2.0/core/ml/: MLModels.cpp  MLModels.h  StatisticalAnalysis.cpp  StatisticalAnalysis.h
BondForge V2.0/core/permissions/: PermissionManager.cpp  PermissionManager.h
BondForge V2.0/core/plugins/: PluginManager.cpp  PluginManager.h
BondForge V2.0/examples/: README.md  sample_examples.json
BondForge V2.0/examples/data/: molecular_properties.csv  protein_sequences.fasta  solubility_data.csv
BondForge V2.0/examples/models/: linear_regression_example.json
BondForge V2.0/examples/molecules/: aspirin.sdf  benzene.sdf  caffeine.mol
BondForge V2.0/examples/projects/: drug_discovery_project.json
BondForge V2.0/plugins/example_plugin/: ExamplePlugin.cpp  ExamplePlugin.h  metadata.json
BondForge V2.0/resources/: resources.qrc
BondForge V2.0/scripts/: check_dependencies.py
BondForge V2.0/services/: DataSourceManager.h  DatabaseService.cpp  DatabaseService.h  NetworkService.cpp  NetworkService.h  UpdateScheduler.h  UpdateService.cpp  UpdateService.h
BondForge V2.0/ui/: CollaborationWidget.cpp  CollaborationWidget.h  DataManagementWidget.cpp  DataManagementWidget.h  MLAnalysisWidget.cpp  MLAnalysisWidget.h  MainWindow.cpp  MainWindow.h  SettingsWidget.cpp  SettingsWidget.h  UpdateWidget.h  VisualizationWidget.cpp  VisualizationWidget.h
BondForge V2.0/utils/: ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h
Source code 1.1/: chemical_ml_core_service.cpp.txt  chemical_ml_dao.cpp.txt  chemical_ml_dao.h.txt  chemical_ml_frontend_app.jsx.txt
